r1.1-beta2 (29.10.2017) - Release, dedicated to the World Stroke Day

  * Add LiquidCrystal library output support
  * Fix comparision of real numbers
  * Fix TAB() indention

r1.1-beta1 (17.10.2017) - Release, dedicated to the International Day for the Eradication of Poverty

  * Fix bug in saving the program to SD card
  * Add SDL-based emulator and autotools linux package

r1.1-alpha2 (03.10.2017) - Release, dedicated to The International Day of Non-Violence

  * Netbeans project updated for usage of Arduino IDE 1.8.4
  * Add LOCATE command
  * GO TO (instead GOTO) is condition compilable
  * Fix loop body indention with the presence of REM lines
  * Fix TAB and SPC print commands
  * Fix comparision of boolean values
  * Alternative equals symbol ("><") and "_" in identifiers are condition compilable
  * Fix loading programs with CR symbol at the line end
  * Fix long integers logical operations
  * Some FLASH and SRAM optimisations

r1.1-alpha1 (28.08.2017) - Release, dedicated to the Great March on Washington

  * Add support of Atmega1284-based single chip computers by Dan
    https://hackaday.io/project/2428-single-chip-avr-basic-computer-v03
  * Add GFX module with drawing functions and commands, currently
    supports output using TVoutEx and UTFT libraries on Arduino and
    TVoutEx SDL2 emulation on Linux
  * Add DELAY function with obvious semantics (in multiterminal mode is unblocking)
  * Add ASC (char code), LEN (string length) and GET$ (user input) functions
  * Add CBR (qubic root) math function
  * Add optional alignment of the line numbers in LIST command
  * Boolean arrays (name ends with ! symbol) are bit-packed, providing
    significant memory saving
  * Errors in functions and commands treated as Dynamic vs Static semantic
    errors
  * Some bug fixes and code cleanup
  * As usual, some hard-to-find bugs were added

r1.0-beta1 (20.08.2017) - Release, dedicated to the Russian Day of Air Fleet and